--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,7 +3,7 @@
 	"localeSwapButton": "简体中文",
 	"animatedArrowSemanticSwipe": "Explore details about {title}.",
 	"@animatedArrowSemanticSwipe": {"placeholders": {"title": {}}},
-	"appBarTitleFactsHistory": "Facts and History",
+	"appBarTitleFactsHistory": "FACTS",
 	"appBarTitleConstruction": "Construction",
 	"appBarTitleLocation": "Location Info",
 	"bottomScrubberSemanticScrubber": "scrubber",
