--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -226,6 +226,34 @@
 	"greatWallCollectible2Icon": "vase",
 	"greatWallCollectible3Title": "Panel with Peonies and Butterfly",
 	"greatWallCollectible3Icon": "textile",
+
+	"activeMissionTitle1":"30분 산책하기",
+	"activeMissionSubtitle1":"",
+	"activeMissionTitle2":"30분 산책하기",
+	"activeMissionSubtitle2":"",
+	"activeMissionTitle3":"30분 산책하기",
+	"activeMissionSubtitle3":"",
+
+	"calmMissionTitle1":"30분 스트레칭하기",
+	"calmMissionSubtitle1":"",
+	"calmMissionTitle2":"30분 스트레칭하기",
+	"calmMissionSubtitle2":"",
+	"calmMissionTitle3":"30분 스트레칭하기",
+	"calmMissionSubtitle3":"",
+
+	"cratvieMissionTitle1":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle1":"",
+	"cratvieMissionTitle2":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle2":"",
+	"cratvieMissionTitle3":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle3":"",
+
+	"peopleMissionTitle1":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle1":"",
+	"peopleMissionTitle2":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle2":"",
+	"peopleMissionTitle3":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle3":"",
 	
 	"petraTitle": "Petra",
 	"petraSubTitle": "The Lost City",
@@ -259,6 +287,7 @@
 	"petraCollectible2Icon": "vase",
 	"petraCollectible3Title": "Open bowl",
 	"petraCollectible3Icon": "vase",
+	
 	
 	
 	
