--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -405,5 +405,33 @@
 	"timelineEvent1957ce": "苏联发射斯普特尼克1号",
 	"timelineEvent1969ce": "阿波罗11号在月球着陆",
 	"privacyPolicy": "隐私政策",
-	"privacyStatement": "gskinner 非常重视对用户隐私的保护，正如{privacyUrl}里所诉，gskinner 不会收集您的个人信息。"
+	"privacyStatement": "gskinner 非常重视对用户隐私的保护，正如{privacyUrl}里所诉，gskinner 不会收集您的个人信息。",
+		"activeMissionTitle1":"30분 산책하기",
+	"activeMissionSubtitle1":"",
+	"activeMissionTitle2":"30분 산책하기",
+	"activeMissionSubtitle2":"",
+	"activeMissionTitle3":"30분 산책하기",
+	"activeMissionSubtitle3":"",
+
+	"calmMissionTitle1":"30분 스트레칭하기",
+	"calmMissionSubtitle1":"",
+	"calmMissionTitle2":"30분 스트레칭하기",
+	"calmMissionSubtitle2":"",
+	"calmMissionTitle3":"30분 스트레칭하기",
+	"calmMissionSubtitle3":"",
+
+	"cratvieMissionTitle1":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle1":"",
+	"cratvieMissionTitle2":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle2":"",
+	"cratvieMissionTitle3":"제일 좋아하는 옷 사진찍기",
+	"cratvieMissionSubtitle3":"",
+
+	"peopleMissionTitle1":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle1":"",
+	"peopleMissionTitle2":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle2":"",
+	"peopleMissionTitle3":"긍정적인 말 10개하기",
+	"peopleMissionSubtitle3":""
+
 }
