--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -419,13 +419,14 @@
 	"calmMissionSubtitle2":"",
 	"calmMissionTitle3":"30분 스트레칭하기",
 	"calmMissionSubtitle3":"",
+	
+	"creativeMissionTitle1":"제일 좋아하는 옷 사진찍기",
+	"creativeMissionSubtitle1":"",
+	"creativeMissionTitle2":"제일 좋아하는 옷 사진찍기",
+	"creativeMissionSubtitle2":"",
+	"creativeMissionTitle3":"제일 좋아하는 옷 사진찍기",
+	"creativeMissionSubtitle3":"",
 
-	"cratvieMissionTitle1":"제일 좋아하는 옷 사진찍기",
-	"cratvieMissionSubtitle1":"",
-	"cratvieMissionTitle2":"제일 좋아하는 옷 사진찍기",
-	"cratvieMissionSubtitle2":"",
-	"cratvieMissionTitle3":"제일 좋아하는 옷 사진찍기",
-	"cratvieMissionSubtitle3":"",
 
 	"peopleMissionTitle1":"긍정적인 말 10개하기",
 	"peopleMissionSubtitle1":"",
