mission list 자동

--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -406,33 +406,33 @@
 	"timelineEvent1969ce": "阿波罗11号在月球着陆",
 	"privacyPolicy": "隐私政策",
 	"privacyStatement": "gskinner 非常重视对用户隐私的保护，正如{privacyUrl}里所诉，gskinner 不会收集您的个人信息。",
-		"activeMissionTitle1":"30분 산책하기",
-	"activeMissionSubtitle1":"",
-	"activeMissionTitle2":"30분 산책하기",
-	"activeMissionSubtitle2":"",
-	"activeMissionTitle3":"30분 산책하기",
-	"activeMissionSubtitle3":"",
-
-	"calmMissionTitle1":"30분 스트레칭하기",
-	"calmMissionSubtitle1":"",
-	"calmMissionTitle2":"30분 스트레칭하기",
-	"calmMissionSubtitle2":"",
-	"calmMissionTitle3":"30분 스트레칭하기",
-	"calmMissionSubtitle3":"",
 	
-	"creativeMissionTitle1":"제일 좋아하는 옷 사진찍기",
-	"creativeMissionSubtitle1":"",
-	"creativeMissionTitle2":"제일 좋아하는 옷 사진찍기",
-	"creativeMissionSubtitle2":"",
-	"creativeMissionTitle3":"제일 좋아하는 옷 사진찍기",
-	"creativeMissionSubtitle3":"",
+	"activeMissionTitle1":"30분 산책하기",
+	"activeMissionSubtitle1":"active",
+	"activeMissionTitle2":"40분 산책하기",
+	"activeMissionSubtitle2":"active",
+	"activeMissionTitle3":"50분 산책하기",
+	"activeMissionSubtitle3":"active",
 
+	"calmMissionTitle1":"20분 스트레칭하기",
+	"calmMissionSubtitle1":"calm",
+	"calmMissionTitle2":"30분 스트레칭하기",
+	"calmMissionSubtitle2":"calm",
+	"calmMissionTitle3":"40분 스트레칭하기",
+	"calmMissionSubtitle3":"calm",
+
+	"creativeMissionTitle1":"제일 좋아하는 옷 사진찍기",
+	"creativeMissionSubtitle1":"creative",
+	"creativeMissionTitle2":"제일 좋아하는 꽃 사진찍기",
+	"creativeMissionSubtitle2":"creative",
+	"creativeMissionTitle3":"제일 좋아하는 이모티콘 따라하기",
+	"creativeMissionSubtitle3":"creative",
 
 	"peopleMissionTitle1":"긍정적인 말 10개하기",
-	"peopleMissionSubtitle1":"",
-	"peopleMissionTitle2":"긍정적인 말 10개하기",
-	"peopleMissionSubtitle2":"",
-	"peopleMissionTitle3":"긍정적인 말 10개하기",
-	"peopleMissionSubtitle3":""
+	"peopleMissionSubtitle1":"people",
+	"peopleMissionTitle2":"좋아하는 단어 5개 말하기",
+	"peopleMissionSubtitle2":"people",
+	"peopleMissionTitle3":"자기 칭찬 3번 하기",
+	"peopleMissionSubtitle3":"people"
 
 }
