--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -408,31 +408,56 @@
 	"privacyStatement": "gskinner 非常重视对用户隐私的保护，正如{privacyUrl}里所诉，gskinner 不会收集您的个人信息。",
 	
 	"activeMissionTitle1":"30분 산책하기",
-	"activeMissionSubtitle1":"active",
-	"activeMissionTitle2":"40분 산책하기",
-	"activeMissionSubtitle2":"active",
-	"activeMissionTitle3":"50분 산책하기",
-	"activeMissionSubtitle3":"active",
+    	"activeMissionSubtitle1":"active",
+    	"activeMissionTitle2":"40분 산책하기",
+    	"activeMissionSubtitle2":"active",
+    	"activeMissionTitle3":"50분 산책하기",
+    	"activeMissionSubtitle3":"active",
+    	"activeMissionTitle4":"보름달 사진 찍기",
+    	"activeMissionSubtitle4":"active",
+    	"activeMissionTitle5":"한 정거장 전에 내리기",
+        "activeMissionSubtitle5":"active",
+        "activeMissionTitle6":"전시회 가기",
+         "activeMissionSubtitle6":"active",
 
-	"calmMissionTitle1":"20분 스트레칭하기",
-	"calmMissionSubtitle1":"calm",
-	"calmMissionTitle2":"30분 스트레칭하기",
-	"calmMissionSubtitle2":"calm",
-	"calmMissionTitle3":"40분 스트레칭하기",
-	"calmMissionSubtitle3":"calm",
 
-	"creativeMissionTitle1":"제일 좋아하는 옷 사진찍기",
-	"creativeMissionSubtitle1":"creative",
-	"creativeMissionTitle2":"제일 좋아하는 꽃 사진찍기",
-	"creativeMissionSubtitle2":"creative",
-	"creativeMissionTitle3":"제일 좋아하는 이모티콘 따라하기",
-	"creativeMissionSubtitle3":"creative",
+    	"calmMissionTitle1":"20분 스트레칭하기",
+    	"calmMissionSubtitle1":"calm",
+    	"calmMissionTitle2":"30분 스트레칭하기",
+    	"calmMissionSubtitle2":"calm",
+    	"calmMissionTitle3":"40분 스트레칭하기",
+    	"calmMissionSubtitle3":"calm",
+    	"calmMissionTitle4":"즐겨 듣는 음악 공유하기",
+        "calmMissionSubtitle4":"calm",
+        "calmMissionTitle5":"반신욕하기",
+        "calmMissionSubtitle5":"calm",
+        "calmMissionTitle6":"거주 공간 청소하기",
+        "calmMissionSubtitle6":"calm",
 
-	"peopleMissionTitle1":"긍정적인 말 10개하기",
-	"peopleMissionSubtitle1":"people",
-	"peopleMissionTitle2":"좋아하는 단어 5개 말하기",
-	"peopleMissionSubtitle2":"people",
-	"peopleMissionTitle3":"자기 칭찬 3번 하기",
-	"peopleMissionSubtitle3":"people"
+    	"creativeMissionTitle1":"제일 좋아하는 옷 사진찍기",
+    	"creativeMissionSubtitle1":"creative",
+    	"creativeMissionTitle2":"제일 좋아하는 꽃 사진찍기",
+    	"creativeMissionSubtitle2":"creative",
+    	"creativeMissionTitle3":"제일 좋아하는 이모티콘 따라하기",
+    	"creativeMissionSubtitle3":"creative",
+    	"creativeMissionTitle4":"저녁 직접 만들기",
+        "creativeMissionSubtitle4":"creative",
+        "creativeMissionTitle5":"좋아하는 옷 기록하기",
+        "creativeMissionSubtitle5":"creative",
+        "creativeMissionTitle6":"오늘 가장 기억에 남는 순간 그림으로 그리기",
+        "creativeMissionSubtitle6":"creative",
+
+    	"peopleMissionTitle1":"긍정적인 말 10개하기",
+    	"peopleMissionSubtitle1":"people",
+    	"peopleMissionTitle2":"좋아하는 단어 5개 말하기",
+    	"peopleMissionSubtitle2":"people",
+    	"peopleMissionTitle3":"자기 칭찬 3번 하기",
+    	"peopleMissionSubtitle3":"people",
+    	"peopleMissionTitle4":"가족에게 안부 전화하기",
+        "peopleMissionSubtitle4":"people",
+        "peopleMissionTitle5":"친구들과 기념 사진찍기",
+        "peopleMissionSubtitle5":"people",
+        "peopleMissionTitle6":"소중한 사람과 사진 찍기",
+        "peopleMissionSubtitle6":"people"
 
 }
