--- a/lib/l10n/app_zh.arb
+++ b/lib/l10n/app_zh.arb
@@ -406,12 +406,16 @@
 	"timelineEvent1969ce": "阿波罗11号在月球着陆",
 	"privacyPolicy": "隐私政策",
 	"privacyStatement": "gskinner 非常重视对用户隐私的保护，正如{privacyUrl}里所诉，gskinner 不会收集您的个人信息。",
+	
 	"activeMissionTitle1":"산책하기",
 	"activeMissionSubtitle1":"More active more better",
 	"activeMissionSubtitleText1":"목표 시간 : 최소 30분의 시간을 산책에 투자해보세요.",
 	"activeMissionSubtitleText1_2":"장소 : 주변 동네, 공원, 또는 자연을 느낄 수 있는 아름다운 곳을 선택해보세요.",
 	"activeMissionSubtitleText1_3":"‘30분 산책하기’ 미션을 통해 걷기의 즐거움과 건강에 대한 책임감을 함께 느껴보아요! ",
 	"activeMissionSubtitleText1_4":"미션 수행 후에는 미션 수행 사진을 찍고 업로드하여 나만의 미션 모음집을 만들어보는 것은 어떨까요?",
+	"activeHashtag1_1":"#자연과 함께",
+	"activeHashtag1_2":"#신선한 밤공기",
+	"activeHashtag1_3":"#걷기의 즐거움",
 
 
 
@@ -421,7 +425,9 @@
 	"activeMissionSubtitleText2_2":"카메라 설정 : 달 사진을 이쁘게 찍기 위해 카메라 각도와 구도를 연구해보는 것은 어떨까요?‘달 사진 찍기’ 미션을 통해 달의 아름다움을 몸소 느껴보고, 창의적인 사진을 통해 그 순간을 기록해보세요! 보름달의 행운을 빕니다.",
 	"activeMissionSubtitleText2_3":"‘달 사진 찍기’ 미션을 통해 달의 아름다움을 몸소 느껴보고, 창의적인 사진을 통해 그 순간을 기록해보세요! 보름달의 행운을 빕니다.",
 	"activeMissionSubtitleText2_4":"",
-
+	"activeHashtag2_1":"#달빛 좋아요",
+	"activeHashtag2_2":"#오늘은 보름달",
+	"activeHashtag2_3":"#내일은 무슨달?",
 
 	"activeMissionTitle3":"힐링 음악과 함께 요가하기",
 	"activeMissionSubtitle3":"More active more better",
@@ -429,7 +435,9 @@
 	"activeMissionSubtitleText3_2":"평화로운 공간 조성 : 가능하면 조용하고 평화로운 공간을 조성하세요. 촛불이나 향초 등을 사용해 분위기를 더해보세요.",
 	"activeMissionSubtitleText3_3":"요가 매트 준비 : 편안한 옷을 입고 요가 매트 위에 앉아주세요. 시작 전에 몸을 펴고 간단한 스트레칭을 하세요.",
 	"activeMissionSubtitleText3_4":"‘힐링 음악과 함께 요가하기’ 미션을 통해 몸과 마음을 풀어보고, 힐링 음악과 함께하는 요가로 일상의 스트레스를 해소해보세요.",
-
+	"activeHashtag3_1":"#힐링 요가",
+	"activeHashtag3_2":"#음악과 함께",
+	"activeHashtag3_3":"#스트레스 해소",
 
 	"activeMissionTitle4":"전시회 가기",
 	"activeMissionSubtitle4":"More active more better",
@@ -437,7 +445,9 @@
 	"activeMissionSubtitleText4_2":"감상 일지 작성 : 전시회를 돌아다니며 본인이 마주한 작품들에 대한 감상을 일지에 기록하세요.",
 	"activeMissionSubtitleText4_3":"전시회 현장에서 사진 찍기 : 전시회에서 허락이 된다면 몇 장의 사진을 찍어 추억으로 남겨보세요.",
 	"activeMissionSubtitleText4_4":"‘전시회 가기’ 예술의 다양성을 경험하고, 작품과 작가들과 소통하며 새로운 영감을 받아보세요. 또 사진을 통해 자신이 느꼈던 감정을 기록해보는 것은 어떨까요?",
-
+	"activeHashtag4_1":"#예술체험",
+	"activeHashtag4_2":"#문화생활",
+	"activeHashtag4_3":"#전시회 데이트",
 
 	"activeMissionTitle5":"야외 스포츠 참여",
     "activeMissionSubtitle5":"More active more better",
@@ -445,7 +455,9 @@
 	"activeMissionSubtitleText5_2":"친구와 함께 : 이번 기회에 친구와 함께 야외 운동에 도전해 보는 것은 어떨까요?",
 	"activeMissionSubtitleText5_3":"운동 완료 후 공유 : 운동 완료 후 해시태그(#미션성공)와 함께 활동한 모습이나 감정을 사진과 함께 소셜 미디어에 공유해보세요.",
 	"activeMissionSubtitleText5_4":"‘야외 스포츠 참여’ 미션을 통해 즐거운 운동으로 몸과 마음을 활기차게 만들어보세요. 운동 후 열심히 운동 한 자신에게 칭찬과 함께 사진을 남긴다면 Best!",
-
+	"activeHashtag5_1":"#오운완",
+	"activeHashtag5_2":"#스포츠",
+	"activeHashtag5_3":"#자기계발",
 
     "activeMissionTitle6":"한 정거장 전에 내리기",
      "activeMissionSubtitle6":"More active more better",
@@ -453,7 +465,9 @@
 	"activeMissionSubtitleText6_2":"새로운 지역 탐험 : 한 정거장 전에 내리면서 기존에 경험하지 못한 새로운 지역을 탐험해보세요.",
 	"activeMissionSubtitleText6_3":"걷거나 자전거 이용 : 내린 후, 목적지까지 걸어가거나 자전거를 이용하여 새로운 경로로 이동해보세요.",
 	"activeMissionSubtitleText6_4":"‘한 정거장 전에 내리기’ 미션을 통해 일상에서 벗어나 새로운 경험을 즐기며, 예상치 못한 재미와 흥미를 찾아보세요. 집으로 걸어오는 동안 새롭게 마주하는 것들에 대해 사진을 찍어 공유해주세요!",
-
+	"activeHashtag6_1":"#일상 속 모험",
+	"activeHashtag6_2":"#새로운 경험",
+	"activeHashtag6_3":"#일상 탈출",
 
 
 	"calmMissionTitle1":"반신욕 하기",
@@ -462,7 +476,9 @@
 	"calmMissionSubtitleText1_2":"따뜻한 물 준비 : 자신이 원하는 편안한 온도의 물을 준비해주세요.",
 	"calmMissionSubtitleText1_3":"편안한 음악 선택 : 편안한 음악과 함께 반신욕을 즐겨보는 것은 어떨까요? ",
 	"calmMissionSubtitleText1_4":"‘반신욕 하기’ 미션을 통해 일상의 소소한 휴식을 챙기며 몸과 마음을 기분 좋게 만들어보세요. 반신욕 후 마시는 시원한 물 한잔을 찍어 업로드 해보는 것은 어떨까요?",
-
+	"calmHashtag1_1":"#휴식",
+	"calmHashtag1_2":"#편안한 시간",
+	"calmHashtag1_3":"#힐링타임",
 
 	"calmMissionTitle2":"명상하기",
 	"calmMissionSubtitle2":"Look inside your heart",
@@ -470,7 +486,9 @@
 	"calmMissionSubtitleText2_2":"편안한 자세 : 편한 자세로 앉거나 누워 명상에 집중하세요. 등을 곧게 펴고, 손을 편안하게 배 위에 얹어두세요.",
 	"calmMissionSubtitleText2_3":"마음의 관찰 : 마음의 움직임에 집중하고, 감정이나 떠오르는 생각을 관찰해보세요.",
 	"calmMissionSubtitleText2_4":"매일 짧은 시간이라도 ‘명상 하기’ 미션에 시간을 투자하여 내면의 평화를 찾아보는 것은 어떨까요? 명상 후 가장 먼저 눈에 들어오는 사물이나 공간을 사진으로 찍어 공유해주세요!",
-
+	"calmHashtag2_1":"#눈을 감고",
+	"calmHashtag2_2":"#내면의 평화",
+	"calmHashtag2_3":"#잠들지 않기",
 
 	"calmMissionTitle3":"나만의 힐링 음악 찾기",
 	"calmMissionSubtitle3":"Look inside your heart",
@@ -478,7 +496,9 @@
 	"calmMissionSubtitleText3_2":"장르 탐색 : 다양한 음악 장르 중 여러분이 좋아할 만한 장르를 탐색해보세요. (뉴 에이지, 클래식, 자연 소리 등)",
 	"calmMissionSubtitleText3_3":"나만의 재생 목록 만들기 : 좋아하는 음악을 나만의 재생 목록에 추가하여 나만의 힐링 음악 라이브러리를 만들어보세요.",
 	"calmMissionSubtitleText3_4":"‘나만의 힐링 음악 찾기’ 미션을 통해 나에게 맞는 힐링 음악을 찾아보고, 여러분만의 힐링 음악 플레이리스트를 만들어 사진을 찍어 공유해주세요!",
-
+	"calmHashtag3_1":"#음악 미션",
+	"calmHashtag3_2":"#나만의 음악 세계",
+	"calmHashtag3_3":"#평화로운",
 
 	"calmMissionTitle4":"거주 공간 청소하기",
     "calmMissionSubtitle4":"Look inside your heart",
@@ -486,6 +506,10 @@
 	"calmMissionSubtitleText4_2":"물품 정리 : 불필요한 물품들을 정리하고, 필요한 물품들은 적절한 위치에 배치하세요.",
 	"calmMissionSubtitleText4_3":"먼지 제거 : 가구, 진열장, 책상 등에서 먼지를 청소하고, 바닥도 청소기나 걸레로 깨끗이 닦아보세요.",
 	"calmMissionSubtitleText4_4":"‘거주 공간 청소하기’ 미션을 통해 정돈된 환경에서 생활함으로써 마음에도 평화를 가져다 줄 수 있습니다. 청소가 완료된 후 사진을 찍어 업로드 하는 것도 잊지 마세요!",
+	"calmHashtag4_1":"#집돌이",
+	"calmHashtag4_2":"#집순이",
+	"calmHashtag4_3":"#정돈된 삶",
+
 
     "calmMissionTitle5":"일기 쓰기",
     "calmMissionSubtitle5":"Look inside your heart",
@@ -493,7 +517,9 @@
 	"calmMissionSubtitleText5_2":"자유로운 표현 : 어떤 주제든 자유롭게 표현해보세요.",
 	"calmMissionSubtitleText5_3":"긍정적인 사건 강조 : 일기에는 긍정적인 사건이나 감사한 순간들을 강조하며 기록해보세요!",
 	"calmMissionSubtitleText5_4":"‘일기 쓰기’ 미션을 통해 일기 쓰기 습관을 만들면서 자아 발견과 감정의 표현에 도움을 주게 될 것입니다. 집중해서 자신이 일기를 쓰는 모습이나, 작성된 일기를 사진 찍어 공유해주세요!",
-
+	"calmHashtag1_1":"#마음의 어록",
+	"calmHashtag1_2":"#자아표현",
+	"calmHashtag1_3":"회고",
 
     "calmMissionTitle6":"좋아하는 책 읽기",
     "calmMissionSubtitle6":"Look inside your heart",
@@ -501,7 +527,9 @@
 	"calmMissionSubtitleText6_2":"독서 환경 조성 : 편안한 읽기 환경을 조성하세요. 차 한잔이나 간식을 준비하고, 조용한 공간에서 편안한 자세로 책에 몰입하세요.",
 	"calmMissionSubtitleText6_3":"독서 일기 작성 : 독서 중에 떠오르는 생각이나 감정을 독서 일기에 기록하세요. 어떤 구절이 마음에 남았는지, 이 책을 통해 느낀 것은 무엇인지 적어보세요.",
 	"calmMissionSubtitleText6_4":"‘좋아하는 책 읽기’ 미션을 통해 당신만의 독서 시간을 즐기며, 동시에 독서 커뮤니티와 소통하면서 책의 매력을 나눠 보는 것은 어떨까요? 독서로부터 온 즐거움을 타인과 공유해보세요!",
-
+	"calmHashtag1_1":"#책과함께",
+	"calmHashtag1_2":"#북적북적",
+	"calmHashtag1_3":"#나도 독서왕",
 
 	"creativeMissionTitle1":"제일 좋아하는 옷 사진 찍기",
 	"creativeMissionSubtitle1":"Make creative your Life",
@@ -509,7 +537,9 @@
 	"creativeMissionSubtitleText1_2":"어울리는 배경 찾기 : 착용한 옷에 어울리는 배경을 찾아보세요. 실내, 실외, 또는 특별한 장소 중 어디든 좋아요.",
 	"creativeMissionSubtitleText1_3":"포즈와 표정 : 포즈와 표정을 통해 자신만의 스타일을 표현해보세요.",
 	"creativeMissionSubtitleText1_4":"‘제일 좋아하는 옷 사진 찍기’ 미션을 통해 자신만의 옷 스타일을 발견하고, 좋아하는 옷에 어울리는 포즈와 분위기를 찾아보세요!",
-
+	"creativeHashtag1_1":"#나는야 패피",
+	"creativeHashtag1_2":"#마이스타일",
+	"creativeHashtag1_3":"#도전 패션모델",
 
 	"creativeMissionTitle2":"제일 좋아하는 꽃 사진찍기",
 	"creativeMissionSubtitle2":"Make creative your Life",
@@ -517,7 +547,9 @@
 	"creativeMissionSubtitleText2_2":"꽃 찾기 : 자신이 좋아하는 꽃을 집 주변에서 찾아보세요!",
 	"creativeMissionSubtitleText2_3":"포즈와 표정 : 포즈와 표정을 통해 자신만의 스타일을 표현해보세요.",
 	"creativeMissionSubtitleText2_4":"‘제일 좋아하는 옷 사진 찍기’ 미션을 통해 자신만의 옷 스타일을 발견하고, 좋아하는 옷에 어울리는 포즈와 분위기를 찾아보세요!",
-
+	"creativeHashtag2_1":"#흔들리는",
+	"creativeHashtag2_2":"#꽃들 속에서",
+	"creativeHashtag2_3":"#너의 향기가 느껴진거야",
 
 	"creativeMissionTitle3":"저녁 식사 직접 만들기",
 	"creativeMissionSubtitle3":"Make creative your Life",
@@ -525,6 +557,9 @@
 	"creativeMissionSubtitleText3_2":"식재료 준비 : 선택한 레시피에 필요한 식재료를 구매하고, 주방에서 필요한 도구들을 정리하세요. ",
 	"creativeMissionSubtitleText3_3":"테이블 세팅 : 요리가 끝나면 아름다운 식탁을 세팅해보세요. 소품이나 색다른 식기로 분위기를 연출하면 더욱 특별한 식사가 될 것입니다.",
 	"creativeMissionSubtitleText3_4":"‘저녁 식사 직접 만들기’ 미션을 통해 직접 만든 음식의 만족감과 공유의 기쁨을 느껴보세요. 요리하는 과정과 함께 완성된 음식을 사진 찍어 해스태그와 함께 SNS에 공유도 해보세요!",
+	"creativeHashtag3_1":"#홈쿡",
+	"creativeHashtag3_2":"#집밥선생",
+	"creativeHashtag3_3":"#먹스타그램",
 
 
 
@@ -532,8 +567,11 @@
     "creativeMissionSubtitle4":"Make creative your Life",
 	"creativeMissionSubtitleText4":"기억에 남는 순간 선택 : 오늘 있었던 순간 중에서 특별하게 기억에 남는 한 장면을 선택하세요. 어떤 감정이나 특별한 경험을 담은 순간이 좋습니다.",
 	"creativeMissionSubtitleText4_2":"감정 표현 : 선택한 순간이 담고 있는 감정을 그림으로 표현해보세요. 감정의 표정, 주변의 풍경, 색감 등을 활용하여 그림을 완성해나가 보세요. ",
-	"creativeMissionSubtitleText4_3":"작품 완성 : 당신이 원하는 자유로운 스타일로 작품을 완성해보세요. 완성된 그림이 감정을 잘 표현하고 오늘의 순간을 잘 담아냈는지 확인해보세요.",
+	"creativeMissionSubtitleText4_3":"작품 완성 : 완성된 그림이 감정을 잘 표현하고 오늘의 순간을 잘 담아냈는지 확인해보세요.",
 	"creativeMissionSubtitleText4_4":"‘오늘 가장 기억에 남는 순간 그림으로 그려보기’ 미션을 통해 자신의 창의성을 발휘하면서 오늘의 특별한 순간을 그림으로 기록해보세요. 작품을 통해 감정과 경험을 나누는 것은 더욱 풍요로운 하루로 이어질 것입니다.",
+	"creativeHashtag4_1":"일상아트",
+	"creativeHashtag4_2":"#오늘나는예술가",
+	"creativeHashtag4_3":"#일상을 그림으로",
 
 
 
@@ -543,6 +581,9 @@
 	"creativeMissionSubtitleText5_2":"이모티콘 따라하기 : 선택한 이모티콘을 자신만의 스타일로 재해석하여 따라해보세요.",
 	"creativeMissionSubtitleText5_3":"‘이모티콘 따라하기’ 미션을 통해 자신의 감정을 이모티콘으로 솔직하게 풀어내보고 창의성을 발휘하여 다양한 방식으로 표현해보세요. 또 표현한 자신의 모습을 사진을 찍어 업로드 해주세요.",
 	"creativeMissionSubtitleText5_4":"",
+	"creativeHashtag5_1":"#임티",
+	"creativeHashtag5_2":"#창의성",
+	"creativeHashtag5_3":"#이모티콘플러스쓸까",
 
 
     "creativeMissionTitle6":"일주일 계획 짜보기",
@@ -551,6 +592,9 @@
 	"creativeMissionSubtitleText6_2":"우선순위 정하기 : 목표들을 우선순위에 따라 나열하세요. 어떤 일을 먼저 처리해야 할지 생각하면서 계획을 세워보세요.",
 	"creativeMissionSubtitleText6_3":"여유 시간 확보 : 각 날짜의 계획에 여유 시간을 두어 예상치 못한 상황에 대비하세요. 계획이 조금씩 밀리더라도 대처할 수 있는 여유를 만들어두는 것이 중요합니다!  ",
 	"creativeMissionSubtitleText6_4":"‘일주일 계획 짜보기’ 미션을 통해 효율적인 일주일을 보내면서 목표를 달성하는 즐거움을 느껴보세요. 계획에 따라 움직이면서 성취감도 느끼고 설정한 목표에 한 걸음 더 다가가보세요.",
+	"creativeHashtag6_1":"#주간계획",
+	"creativeHashtag6_2":"#작심삼일X",
+	"creativeHashtag6_3":"#J의삶",
 
 
 	"peopleMissionTitle1":"긍정적인 말 10개하기",
@@ -559,6 +603,9 @@
 	"peopleMissionSubtitleText1_2":"이건 미션 1 people",
 	"peopleMissionSubtitleText1_3":"이건 미션 1 people",
 	"peopleMissionSubtitleText1_4":"이건 미션 1 people",
+	"peopleHashtag1_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag1_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag1_3":"#나는 무슨 꽃일까?",
 
 
 	"peopleMissionTitle2":"자기 칭찬 3개 하기",
@@ -567,7 +614,9 @@
 	"peopleMissionSubtitleText2_2":"이건 미션 2 people",
 	"peopleMissionSubtitleText2_3":"이건 미션 2 people",
 	"peopleMissionSubtitleText2_4":"이건 미션 2 people",
-
+	"peopleHashtag2_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag2_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag2_3":"#나는 무슨 꽃일까?",
 
 	"peopleMissionTitle3":"가족에게 안부 전화하기",
 	"peopleMissionSubtitle3":"Share with your Memory",
@@ -575,7 +624,9 @@
 	"peopleMissionSubtitleText3_2":"이건 미션 3 people",
 	"peopleMissionSubtitleText3_3":"이건 미션 3 people",
 	"peopleMissionSubtitleText3_4":"이건 미션 3 people",
-
+	"peopleHashtag3_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag3_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag3_3":"#나는 무슨 꽃일까?",
 
 	"peopleMissionTitle4":"친구들과 기념 사진 찍기",
     "peopleMissionSubtitle4":"Share with your Memory",
@@ -583,7 +634,9 @@
 	"peopleMissionSubtitleText4_2":"이건 미션 4 people",
 	"peopleMissionSubtitleText4_3":"이건 미션 4 people",
 	"peopleMissionSubtitleText4_4":"이건 미션 4 people",
-
+	"peopleHashtag4_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag4_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag4_3":"#나는 무슨 꽃일까?",
 
     "peopleMissionTitle5":"가족들에게 감사 편지 써보기",
     "peopleMissionSubtitle5":"Share with your Memory",
@@ -591,13 +644,18 @@
 	"peopleMissionSubtitleText5_2":"이건 미션 5 people",
 	"peopleMissionSubtitleText5_3":"이건 미션 5 people",
 	"peopleMissionSubtitleText5_4":"이건 미션 5 people",
-
+	"peopleHashtag5_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag5_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag5_3":"#나는 무슨 꽃일까?",
 
     "peopleMissionTitle6":"백화점 구경가기",
     "peopleMissionSubtitle6":"Share with your Memory",
 	"peopleMissionSubtitleText6":"이건 미션 5 people",
 	"peopleMissionSubtitleText6_2":"이건 미션 5 people",
 	"peopleMissionSubtitleText6_3":"이건 미션 5 people",
-	"peopleMissionSubtitleText6_4":"이건 미션 5 people"
+	"peopleMissionSubtitleText6_4":"이건 미션 5 people",
+	"peopleHashtag6_1":"#흩날리는 꽃들 속에서",
+	"peopleHashtag6_2":"#너의 향기가 느껴진거야",
+	"peopleHashtag6_3":"#나는 무슨 꽃일까?"
 
 }
